[gd_scene load_steps=3 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=2]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="Background" instance=ExtResource( 2 )]

[node name="Panel" type="Panel" parent="Background"]
margin_left = 8.0
margin_top = 13.0
margin_right = 136.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -66.0
margin_right = 44.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="Background/VBoxContainer"]
margin_right = 88.0
margin_bottom = 15.0
rect_min_size = Vector2( 88, 15 )
text = "Confirm"

[node name="OptionsHolder" type="VBoxContainer" parent="Background"]
margin_left = 23.0
margin_top = 54.0
margin_right = 127.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="Label" parent="Background/OptionsHolder"]
margin_right = 104.0
margin_bottom = 12.0
text = "Music Volume:"

[node name="MusicSlider" type="HSlider" parent="Background/OptionsHolder"]
margin_top = 16.0
margin_right = 104.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume2" type="Label" parent="Background/OptionsHolder"]
margin_top = 40.0
margin_right = 104.0
margin_bottom = 52.0
text = "SFX Volume:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectsSlider" type="HSlider" parent="Background/OptionsHolder"]
margin_top = 56.0
margin_right = 104.0
margin_bottom = 76.0
rect_min_size = Vector2( 100, 20 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/VBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
